# CIS6030

./: .gitignore
Assignment1/: A1_data.txt
Assignment1/Project/: .gitignore  CMakeLists.txt  DatabaseFileIO.cpp  DatabaseFileIO.h  README.md  main.cpp
Assignment1/Project/BPlusTree_lib/: BPlusTree.cpp  BPlusTree.h  BPlusTree.tpp  CMakeLists.txt
Assignment1/Project/Database_lib/: CMakeLists.txt  DatabaseFileIO.cpp  DatabaseFileIO.h  FinalPrintOut.cpp  FinalPrintOut.h  RawDataParse.cpp  RawDataParse.h
Assignment1/Project/DateConverter_lib/: CMakeLists.txt  Gregorian.cpp
Assignment1/Project/Google_tests/: BPlusTreeTests.cpp  BlockTests.cpp  CMakeLists.txt  RawDataParseTests.cpp  RecordTests.cpp  TestMain.cpp  test1.cpp
Assignment1/Question2/: .gitignore  CMakeLists.txt  README.MD  main.cpp
Assignment1/Question2/FileParse/: CMakeLists.txt  ReadRawFile.cpp  ReadRawFile.h
Assignment1/Question2/Utility/: BlockListNode.cpp  BlockListNode.h  BytesOperation.cpp  BytesOperation.h  CMakeLists.txt  HashTableBlock.cpp  HashTableBlock.h  Record.cpp  Record.h
Assignment2/: .gitignore  A1_data.txt  build.gradle  settings.gradle
Assignment2/src/main/java/: Assignment2.tar  Customer.java  README.md  WordCount.java  WordCountQ1.java  WordCountQ2.java
Assignment2/src/main/kotlin/: Main.kt
Assignment3/: 6030a3.yml  Admission_Predict_Ver1.1.csv  LogisticRegression.py  MultiVariableLinearRegression.py  README.md  SQLOperations.py  YourConstant.py  main.py  requirements.txt
Assignment4/PyHDBSCAN/: HierarchicalTree.R  HierarchicalTreeTests.R  MST_Generator.Rmd  Question2.R  README.MD  UnionFind.R  UnionFindTests.R  assignment4.yml  environment.yml  main.py  step1_setup_docker.r  step2_kmean.r  step3_hdbscan.r
Assignment4/PyHDBSCAN/r2r/: DESCRIPTION  INDEX
Assignment4/PyHDBSCAN/r2r/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds  vignette.rds
Assignment4/PyHDBSCAN/r2r/R/: r2r.rdb  r2r.rdx
Assignment4/PyHDBSCAN/r2r/doc/: benchmarks.R  benchmarks.html  index.html  r2r.R  r2r.html
Assignment4/PyHDBSCAN/r2r/help/: AnIndex  aliases.rds  paths.rds  r2r.rdb  r2r.rdx
Assignment4/PyHDBSCAN/r2r/html/: 00Index.html
